# BlueGauge

./: Cargo.toml  README-en.md  README.md  build.rs
.github/: dependabot.yml
assets/: BlueGauge.exe.manifest.rc
libs/windows_pnp/: Cargo.toml
libs/windows_pnp/libs/windows_pnp_common/: Cargo.toml
libs/windows_pnp/libs/windows_pnp_uuid/: Cargo.toml
libs/windows_pnp/src/: lib.rs  pnp_device_node_info.rs  pnp_enumerator.rs
src/: config.rs  icon.rs  language.rs  main.rs  menu_handlers.rs  notify.rs  single_instance.rs  startup.rs  theme.rs  tray.rs  util.rs
src/bluetooth/: ble.rs  btc.rs  info.rs  listen.rs  mod.rs  watch.rs
src/tray/: icon.rs  menu_handlers.rs  menu_item.rs  mod.rs  tray.rs
src/tray/menu/: about.rs  handler.rs  item.rs  mod.rs
tests/: serde.rs  test.rs  watch_pnp.rs
