[package]
name = "BlueGauge"
version = "0.3.0"
edition = "2024"
authors = ["iKineticate <https://github.com/iKineticate>"]
repository = "https://github.com/iKineticate/BlueGauge"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_off"] }
image = "0.25"
piet-common = "0.8.0" # 字体渲染
serde= { version = "1.0", features = ["derive"] }
scopeguard = "1.2.0"
tauri-winrt-notification = "0.7"
tokio = { version = "1.47", features = ["full"]}
toml = "0.9"
tray-icon = "0.21"
windows_pnp = { path = "libs/windows_pnp" }
winit = "0.30"
winreg = "0.55"

[dependencies.windows]
version = "0.62"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Globalization",
]

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Wdk_Devices_Bluetooth",
]

[dev-dependencies.windows]
version = "0.62"
features = [
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading"
]

[build-dependencies]
embed-resource = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true