[package]
name = "BlueGauge"
version = "0.3.5"
edition = "2024"
description = "A lightweight tray tool for easy viewing of the battery level of the Bluetooth device."
authors = ["iKineticate <https://github.com/iKineticate>"]
repository = "https://github.com/iKineticate/BlueGauge"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
futures = "0.3.31"
log = { version = "0.4.28", features = ["release_max_level_off"] }
image = { version = "0.25.9", default-features = false, features = ["ico", "png"] }
piet-common = "0.8.0" # 字体渲染
ab_glyph = { version = "0.2", default-features = false, features = ["std"] }
serde= { version = "1.0.228", features = ["derive"] }
scopeguard = "1.2.0"
tauri-winrt-notification = "0.7.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9.8"
tray-icon = "0.21.2"
windows_pnp = { path = "libs/windows_pnp" }
winit = "0.30.12"
winreg = "0.55.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Wdk_Devices_Bluetooth",
]

[dev-dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Devices_Properties"
]

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true