[package]
name = "windows_pnp_uuid"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/scalefs/scalefs-uuid-lib-rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
]